--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link
       rel="stylesheet"
       href="https://unpkg.com/swiper/swiper-bundle.min.css"
-    />
+    /> 
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
@@ -213,7 +213,7 @@
                     <div class="plus"></div>
                     <div class="img-description">
                       <h3>Machine learning</h3>
-                      <h5>View Demo</h5>
+                      <a href="https://github.com/roshangomes/Sentiment-Analysis"><h5>View Demo</h5></a>
                     </div>
                   </div>
                 </div>
