--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 Aspiring to learn and grow more!.
                 
               </p>
-              <a href="https://magenta-lola-39.tiiny.site" class="btn">Download CV</a>
+              <a href="https://magenta-lola-39.tiiny.site/" class="btn">Download CV</a>
             </div>
 
             <div class="column-2 image">
